--- a/wiki/SupportedDevices.wiki
+++ b/wiki/SupportedDevices.wiki
@@ -8,3 +8,7 @@ The following devices have been tested with jQLite:
   * Android
   * !BlackBerry 8330, 8530, 9700, etc. (with OS v4.6+)
   * webOS (PalmPre, Palm pixi)
+
+== Devices Tested - Not Functional ==
+
+  * IEMobile 6
