Edited wiki page through web user interface.

--- a/wiki/SupportedDevices.wiki
+++ b/wiki/SupportedDevices.wiki
@@ -7,7 +7,7 @@ The following devices have been tested with jQLite:
   * iPhone, iPod Touch
   * Android
   * !BlackBerry 8330, 8530, 9700, etc. (with OS v4.6+)
-  * webOS (PalmPre, Palm pixi)
+  * webOS (!PalmPre, Palm pixi)
 
 == Devices Tested - Not Functional ==
 
