Edited wiki page through web user interface.

--- a/wiki/UsingJQLite.wiki
+++ b/wiki/UsingJQLite.wiki
@@ -40,6 +40,9 @@ Supported methods:
   * .hasClass(name)
   * .html(htmltext)
   * .parent()
+  * .parent(selector)
+  * .parents()
+  * .parents(selector)
   * .append(obj)
   * .remove()
   * .remove(filter)
