Edited wiki page through web user interface.

--- a/wiki/UsingJQLite.wiki
+++ b/wiki/UsingJQLite.wiki
@@ -43,6 +43,12 @@ Supported methods:
   * .parent(selector)
   * .parents()
   * .parents(selector)
+  * .prev()
+  * .prev(selector)
+  * .next()
+  * .next(selector)
+  * .index()
+  * .index(selector)
   * .append(obj)
   * .remove()
   * .remove(filter)
