Edited wiki page through web user interface.

--- a/wiki/UsingJQLite.wiki
+++ b/wiki/UsingJQLite.wiki
@@ -122,6 +122,20 @@ In addition to the methods above, you can use the document-ready functionality a
 
 The event engine is implemented to be as simple as possible.  It isn't a direct match for the jQuery event engine.  Binding of browser events (click, mouseover, mouseout, etc.) is done through `addEventListener()`, but custom events are supported as well.  The difference is that for browser events, the `Event` object is the only argument passed to the event handler.  Any data associated with a `.trigger()` is passed as a "data" field on the `Event` object.  For custom events, the "data" is passed as an array to the handler.
 
+{{{
+   $("div.button").click(function() {
+      alert("You clicked the button!");
+   });
+
+   $("div.receiver").bind("passthru", function(evt, param1, param2) {
+      alert("I've received " + param1 + " and " + param2);
+   });
+
+   $("div.clickMe").click(function() {
+      $("div.receiver").trigger("passthru", ["apple", "banana"]);
+   });
+}}}
+
 == Extending jQLite ==
 
 jQLite now supports extensions.  Just like jQuery, you can extend a plain !JavaScript object, `jQuery`, or `jQuery.fn`.  This allows you to create extensions to jQLite.  The extensions can still only use the methods available above, but you should be able to implement simple extensions.
