Edited wiki page through web user interface.

--- a/wiki/UsingJQLite.wiki
+++ b/wiki/UsingJQLite.wiki
@@ -11,7 +11,7 @@ If you develop your web app to use jQuery in its most simplest way, you should b
 
 The following are the types of selectors currently implemented.  The selectors are implemented using straightforward !JavaScript since regular expressions across browsers aren't consistent:
 
-|| Selector Type || Syntax ||
+|| *Selector Type* || *Syntax* ||
 || Id || #foo ||
 || Element || div, span, table ||
 || Class || .bar, div.baz ||
