Edited wiki page through web user interface.

--- a/wiki/UsingJQLite.wiki
+++ b/wiki/UsingJQLite.wiki
@@ -36,25 +36,25 @@ Supported methods: _(links to jQuery Docs)_
   * [http://api.jquery.com/addClass/ .addClass(name)]
   * [http://api.jquery.com/removeClass/ .removeClass(name)]
   * [http://api.jquery.com/toggleClass/ .toggleClass(name)]
-  * [http://api.jquery.com/css/ .css(name|obj, value)]
+  * [http://api.jquery.com/css/ .css([name/obj[, value]])]
   * [http://api.jquery.com/show/ .show(callbackFunction...)]
   * [http://api.jquery.com/hide/ .hide(callbackFunction...)]
   * [http://api.jquery.com/hasClass/ .hasClass(name)]
   * [http://api.jquery.com/html/ .html(htmltext)]
-  * [http://api.jquery.com/parent/ .parent(selector)]
-  * [http://api.jquery.com/parents/ .parents(selector)]
-  * [http://api.jquery.com/prev/ .prev(selector)]
-  * [http://api.jquery.com/next/ .next(selector)]
-  * [http://api.jquery.com/children/ .children(selector)]
+  * [http://api.jquery.com/parent/ .parent([selector])]
+  * [http://api.jquery.com/parents/ .parents([selector])]
+  * [http://api.jquery.com/prev/ .prev([selector])]
+  * [http://api.jquery.com/next/ .next([selector])]
+  * [http://api.jquery.com/children/ .children([selector])]
   * [http://api.jquery.com/eq/ .eq(index)]
-  * [http://api.jquery.com/index/ .index(optSelector)]
+  * [http://api.jquery.com/index/ .index([selector])]
   * [http://api.jquery.com/append/ .append(obj)]
-  * [http://api.jquery.com/remove/ .remove(filter)]
+  * [http://api.jquery.com/remove/ .remove([filter])]
   * [http://api.jquery.com/empty/ .empty()]
-  * [http://api.jquery.com/val/ .val(opt)]
-  * [http://api.jquery.com/attr/ .attr(name|obj, optValue)]
+  * [http://api.jquery.com/val/ .val([value])]
+  * [http://api.jquery.com/attr/ .attr([name/obj[, value]])]
   * [http://api.jquery.com/bind/ .bind(eventName, function...)]
-  * [http://api.jquery.com/trigger/ .trigger(eventName, (array))]
+  * [http://api.jquery.com/trigger/ .trigger(eventName[, array]))]
   * [http://api.jquery.com/extend/ .extend(obj)]
 
 Event Handlers: _(links to jQuery Docs)_
