--- a/wiki/SupportedDevices.wiki
+++ b/wiki/SupportedDevices.wiki
@@ -6,8 +6,10 @@ The following devices have been tested with jQLite:
 
   * iPhone, iPod Touch
   * Android
-  * !BlackBerry 8330, 8530, 9700, etc. (with OS v4.6+)
+  * Blackberry 8330, 8530, 9700, etc. (with OS v4.6+)
   * webOS (!PalmPre, Palm pixi)
+
+After further testing on the Blackberry platform, I have determined that the 4.6+ version of the browser, while capable, is not the best upon which to rely.  As it stands, I would recommend a v5.0 or higher version of the browser when developing for the Blackberry.
 
 == Devices Tested - Not Functional ==
 
