Edited wiki page through web user interface.

--- a/wiki/PerformanceImprovement.wiki
+++ b/wiki/PerformanceImprovement.wiki
@@ -7,3 +7,5 @@ jQLite has been updated to use `querySelectorAll()` if it's available.  This all
 Setting `jQuery.forceSimpleSelectorEngine` to `true` will force the usage of the older selector engine (jQLite v1.0.0 - v1.1.0).  When this flag is set to `false` the determination is made based on whether the element supports this method or not.  It will automatically downgrade if the method doesn't exist.
 
 Current testing shows that the speedup is significant (approximately 10-20% faster for the most complex pages) and that it is functioning well on all current mobile browsers.  If you see issues, you should set the aforementioned flag to `true` to revert to the older selector engine.
+
+For more information about `querySelectorAll()`, refer to [http://www.w3.org/TR/selectors-api/ this page].
